# marp-mcp

./: .env  README.md  mcp_config.json  pyproject.toml
src/marp_mcp/: __init__.py  server.py
