[project]
name = "marp-mcp"
version = "0.1.0"
description = "MCP server for Marp CLI presentation generation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/marp_mcp"]

[project.scripts]
marp-mcp = "marp_mcp.server:main"
